# finite_automatons

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/automaton/: Automaton.h
include/dfa/: DFA.h
include/nfa/: NFA.h
include/regex/: RegexTreeBuilder.h
src/: CMakeLists.txt
src/automaton/: CMakeLists.txt
src/dfa/: CMakeLists.txt  DFA.cpp
src/nfa/: CMakeLists.txt  NFA.cpp
src/regex/: CMakeLists.txt  RegexTreeBuilder.cpp
src/tasks/: CMakeLists.txt  build_complement_to_dfa.cpp  build_dfa_from_nfa.cpp  build_empty_edges_closure.cpp  build_fdfa.cpp  build_nfa_from_regex.cpp  main.cpp  regex_from_fdfa.cpp
tests/: CMakeLists.txt  all_tests.cpp
tests/dfa/: CMakeLists.txt  DFATestCase.cpp  DFATestCase.h
tests/nfa/: CMakeLists.txt  NFATestCase.cpp  NFATestCase.h
tests/regex/: CMakeLists.txt  RegexTestCase.cpp  RegexTestCase.h
